# bj-jedi

./: .gitignore  AUTHORS  BOOKMARKS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  globals.mk
config/: .gitignore  rl_el.m4
src/: .cvsignore  Makefile  Makefile.am  README  TODO  analysis.cc  analysis.hh  bj-splitgen.cc  bjgrader.cc  bjswoc.cc  blackjack.cc  blackjack.hh  boc2.cc  bookmark.cc  bookmark.hh  card_state.cc  card_state.hh  config.h  counter.cc  counter.hh  deck.cc  deck.hh  deck_state.cc  deck_state.hh  devel_switches.hh  enums.hh  expectations.cc  expectations.hh  grader.cc  grader.hh  hand.cc  hand.hh  lobby.cc  lobby.hh  num.hh  outcome.cc  outcome.hh  play_options.cc  play_options.hh  player_action.cc  (+7 more)
src/apps/: bj-analyze-hand.cc  bj-dealer-odds.cc  bj-splitgen.cc  bjgrader.cc  bjswoc.cc  boc2.cc
src/bj/: devel_switches.hh
src/bj/core/: analysis.cc  analysis.hh  blackjack.cc  blackjack.hh  card_state.cc  card_state.hh  counter.cc  counter.hh  deck.cc  deck.hh  deck_state.cc  deck_state.hh  enums.hh  expectations.cc  expectations.hh  hand.cc  hand.hh  num.hh  outcome.cc  outcome.hh  player_action.cc  player_action.hh  statistics.cc  statistics.hh  strategy.cc  strategy.hh  variation.cc  variation.hh
src/bj/core/analysis/: dealer_analysis.cc  dealer_analysis.hh  player_analysis.cc  player_analysis.hh
src/bj/core/hand/: split_state.cc  split_state.hh
src/bj/core/state/: dealer_hand.cc  dealer_hand.hh  hand_common.hh  player_hand.cc  player_hand.hh  split_state.cc  split_state.hh
src/bj/ui/stdio/: bookmark.cc  bookmark.hh  grader.cc  grader.hh  lobby.cc  lobby.hh  play_options.cc  play_options.hh
src/util/: algorithm.hh  array.hh  array.tcc  attributes.h  command.hh  command.tcc  configure_option.hh  getopt_mapped.cc  getopt_mapped.hh  getopt_mapped.tcc  getopt_portable.h  iosfmt_saver.hh  member_select_iterator.hh  probability.hh  probability.tcc  readline.h  readline_wrap.cc  readline_wrap.hh  stacktrace.cc  stacktrace.hh  string.cc  string.hh  string.tcc  tokenize.cc  tokenize.hh  value_saver.hh
test/: .gitignore  Makefile.am  basic-6to5-all.bj-exp  basic-6to5-all.bj-in  basic-S17-all.bj-exp  basic-S17-all.bj-in  basic-hit-split-As.bj-in  basic-no-surr-all.bj-exp  basic-no-surr-all.bj-in  basic-noDAS-all.bj-exp  basic-noDAS-all.bj-in  basic-nosplit-all.bj-in  basic-resplit-aces-all.bj-in  basic-resplit-all.bj-in  basic-strategy-all.bj-exp  basic-strategy-all.bj-in  dealer-odds-basic.expect  dealer-odds-basic.sh  dealer-odds-dynamic-composition-H17.expect  dealer-odds-dynamic-composition-H17.sh  dealer-odds-dynamic-composition-S17.expect  dealer-odds-dynamic-composition-S17.sh  dealer-odds-dynamic-sensitivity-H17.expect  dealer-odds-dynamic-sensitivity-H17.sh  dealer-odds-dynamic-sensitivity-S17.expect  dealer-odds-dynamic-sensitivity-S17.sh  dealer-odds-dynamic.expect  dealer-odds-dynamic.sh  dealer-odds-exact-composition-H17.expect  dealer-odds-exact-composition-H17.sh  dealer-odds-exact-composition-S17.expect  dealer-odds-exact-composition-S17.sh  dealer-odds-exact-sensitivity-H17.expect  dealer-odds-exact-sensitivity-H17.sh  dealer-odds-exact-sensitivity-S17.expect  dealer-odds-exact-sensitivity-S17.sh  defaults.bj-exp  defaults.bj-in  dynamic-strategy-1-less-2.bj-exp  dynamic-strategy-1-less-2.bj-in  (+79 more)
text/: .gitignore  Make.figtex  Make.latex  Makefile.am  basic.tex  betting.tex  bj-math.bib  bj-math.tex  composition.tex  counting.tex  dealer.tex  experimental.tex  hit-vs-stand-table.awk  intro.tex  preface.tex  scale.awk  state-machine-tabular.awk  transpose-matrix.awk  variations.tex
text/figs/: .gitignore
text/tables/: .gitignore
